Add new files and update dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,15 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "cors.js", "pages/api/getSubjects.js", "pages/api/status.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "cors.js",
+    "pages/api/subjects/subject.js",
+    "pages/api/status.ts",
+    "pages/models/Subjects.js"
+  ],
   "exclude": ["node_modules"]
 }
