--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
