--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "archiver": "^6.0.1",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "extract-zip": "^2.0.1",
+    "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "micro-cors": "^0.1.1",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
