--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/blob": "^0.16.1",
     "archiver": "^6.0.1",
+    "aws-sdk": "^2.1521.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "extract-zip": "^2.0.1",
     "formidable": "^3.5.1",
+    "imagekitio-react": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "micro-cors": "^0.1.1",
     "mongoose": "^8.0.3",
@@ -22,7 +25,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "reactjs-popup": "^2.0.6"
+    "reactjs-popup": "^2.0.6",
+    "vercel": "^33.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
