Add react-toastify and custom popup component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,6 @@
     "pages/api/subjects/subject.js",
     "pages/api/status.ts",
     "models/Subjects.js"
-  ],
+, "components/Notification.js"  ],
   "exclude": ["node_modules"]
 }
