--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.6",
     "vercel": "^33.0.0"
   },
